# ai-agent-langgraph_agent

./: .gitignore  Dockerfile  aws-auth.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-and-push.yml  deploy-to-eks.yml
app/: cache.py  llm.py  main.py  memory.py  safety.py  vectorstore.py
k8s/: deployment.yaml  ingress.yaml  service.yaml
