[project]
name = "ai-agent-langgraph-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.128.0",
    "fastembed>=0.7.4",
    "langchain>=1.2.6",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.1",
    "pypdf>=6.6.0",
    "python-multipart>=0.0.21",
    "uvicorn>=0.40.0",
]
